# Rice-UI

./: .editorconfig  Cargo.toml  README.md  flake.nix
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
rice-dom/: Cargo.toml
rice-dom/src/: colors.rs  dense.rs  dom.rs  lib.rs  mouse.rs  styles.rs
rice-fmt/: Cargo.toml
rice-fmt/src/: components.rs  enums.rs  main.rs  properties.rs  root.rs  utils.rs
rice-grammar/: .editorconfig  .gitignore  Cargo.toml  build.rs  grammar.js  package.json  tree-sitter.json
rice-grammar/queries/: highlights.scm
rice-grammar/src/: grammar.json  node-types.json
rice-grammar/src-rs/: lib.rs
rice-grammar/test/corpus/: components.txt  components_decl.txt  elements.txt  enums_decl.txt  properties.txt  source_file.txt
rice-layout/: Cargo.toml
rice-layout/src/: alignment.rs  arena.rs  compute.rs  direction.rs  div.rs  gap.rs  insets.rs  layout.rs  lib.rs  rect.rs  size.rs  utils.rs
rice-parser/: Cargo.toml
rice-parser/src/: component.rs  lib.rs  properties.rs  values.rs
rice-treesitter/queries/: highlights.scm
rice-treesitter/src/: parser.c
rice-ui/: Cargo.toml
rice-ui/src/: layout.rs  lib.rs
rice-wgpu/: Cargo.toml
rice-wgpu/src/: init.rs  lib.rs  pipeline.rs  shader.wgsl  write_buffer.rs
